--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,26 @@
 [project]
-name = "curve_dao"
-version = "0.0.1"
-description = "DAO tooling for CurveDAO"
-license = { file = "LICENSE" }
-readme = "README.md"
-
-keywords = [
-    "ethereum",
-    "evm",
-    "smart contract",
-    "governance",
-    "defi",
-    "open finance",
-    "decentralised finance",
-    "finance",
-    "dao",
-    "curve finance",
+name = "curve-dao"
+version = "0.0.5"
+description = "DAO governance tools for CurveDAO."
+readme = {file = "README.md", content-type = "text/markdown"}
+requires-python = ">=3.10"
+license = {text = "AGPL-3.0-only License"}
+keywords = ["ethereum", "smart-contracts", "evm", "vyper", "curve-finance", "dao", "defi"]
+authors = [
+    {name = "FiddyResearch", email = "fiddyresearch@gmail.com"},
 ]
-
-classifiers = ["Topic :: Software Development"]
+maintainers = [
+    {name = "FiddyResearch", email = "fiddyresearch@gmail.com"},
+]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
 
 # Requirements
 dependencies = [
-    "titanoboa@git+https://github.com/vyperlang/titanoboa",
-    "black",
-    "pytest",
+    "titanoboa >= 0.1.10b1",
     "requests",
     "rich",
 ]
@@ -33,7 +29,7 @@ dependencies = [
 requires = ["setuptools", "wheel"]
 
 [tool.setuptools.packages.find]
-include = ["curve_dao*"]
+include = ["curve_dao"]
 
 [tool.black]
 line-length = 88
@@ -41,3 +37,9 @@ target-version = ["py310"]
 
 [tool.isort]
 profile = "black"
+
+[project.urls]
+Homepage = "https://pypi.org/project/curve-dao/"
+GitHub = "https://github.com/bout3fiddy/curve-dao"
+Changelog = "https://github.com/bout3fiddy/curve-dao/blob/main/CHANGELOG.md"
+Issues = "https://github.com/bout3fiddy/curve-dao/issues"
