--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,9 +5,8 @@ on: ["push", "pull_request"]
 env:
   ETHERSCAN_API_KEY: ${{secrets.ETHERSCAN_API_KEY}}
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN }}
-  WEB3_ALCHEMY_API_KEY: ${{secrets.WEB3_ALCHEMY_API_KEY}}
-  IPFS_PROJECT_ID: ${{secrets.IPFS_PROJECT_ID}}
-  IPFS_PROJECT_SECRET: ${{secrets.IPFS_PROJECT_SECRET}}
+  PINATA_TOKEN: ${{secrets.PINATA_TOKEN}}
+  RPC_ETHEREUM: ${{secrets.RPC_ETHEREUM}}
 
 jobs:
   unitary:
@@ -35,4 +34,4 @@ jobs:
           pip install .
 
       - name: Run Tests
-        run: ape test
+        run: python -m pytest
