--- a/.github/workflows/publish-to-pypi.yaml
+++ b/.github/workflows/publish-to-pypi.yaml
@@ -1,38 +1,54 @@
-# upload to pypi using the pypa publish action
-# https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
-
-name: Publish to PyPI
+name: Publish curve-dao to PyPi
 
 on:
   release:
-    types: [published] # releases and pre-releases (release candidates)
+    types: [published]
+  workflow_dispatch:
 
 jobs:
-  publish-pypi:
-    runs-on: ubuntu-latest
-
-    # https://docs.pypi.org/trusted-publishers/using-a-publisher/
+  build-n-publish:
+    runs-on: ${{ matrix.os }}
+    environment:
+      name: pypi
+      url: https://pypi.org/project/curve-dao
     permissions:
-      # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
-    # Specifying a GitHub environment is optional, but strongly encouraged
-    environment: release
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+        architecture:
+          - x64
+        python_version:
+          - 3.10
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Python
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: ${{ matrix.python_version }}
+          architecture: ${{ matrix.architecture }}
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel twine
+      - name: Install pypa/build
+        run: python -m pip install build --user
 
-      - name: Build
-        run: python setup.py sdist bdist_wheel
+      - name: Build a binary wheel and a source tarball
+        run: python -m build
 
-      - name: Publish
+      - name: Store the distribution packages
+        uses: actions/upload-artifact@v4
+        with:
+          name: python-package-distributions
+          path: dist/
+
+      - name: Download all the dists
+        uses: actions/download-artifact@v4
+        with:
+          name: python-package-distributions
+          path: dist/
+
+      - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
